--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<div id="react-app"></div>
-		<script src="./app/index.js" charset="utf-8"></script>
+		<script src="./src/index.js" charset="utf-8"></script>
 	</body>
 </html>
